--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
-    "builds": [{
-        "src": "shoppit/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3"}
-    }],
+    "builds": [
+        {
+            "src": "shoppit/wsgi.py",
+            "use": "@vercel/python"
+        }
+    ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "shoppit/wsgi.py"
