--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "manage.py",
+      "src": "api.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "50mb" }
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "manage.py" }
+    { "src": "/(.*)", "dest": "api.py" }
   ]
 }
